--- a/InitialProject/InitialProject/View/Owner/OwnerHome.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerHome.xaml
@@ -8,19 +8,15 @@
         Title="OwnerHome" Height="768" Width="1024" WindowStartupLocation="CenterScreen">
     <Grid>
         <DataGrid x:Name="DataPanel" Height="677" Width="1024" HorizontalAlignment="Center" Canvas.Top="75" VerticalAlignment="Top" Margin="0,74,0,0" Loaded="OnLoad" FontSize="20"/>
-        <Button Content="Home" Height="75" Width="242" FontSize="17" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Button x:Name="AccommodationDropBTN" Content="Accommodation" Canvas.Left="242" Height="75" Width="213" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="17" Margin="242,0,0,0" Click="AccommodationDrop"/>
-        <Button x:Name="MediaDropBTN" Content="Media" Canvas.Left="455" Height="75" Width="281" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="17" Canvas.Top="1" Margin="455,0,0,0" Click="MediaDrop"/>
-        <Button Content="Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Height="74" Width="288" Click="OpenMoveReservation" Canvas.Left="736" FontSize="17" Margin="736,0,0,0" />
+        <Button Content="Home" Height="75" Width="201" FontSize="17" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="101,0,0,0"/>
+        <Button x:Name="AccommodationDropBTN" Content="Accommodation" Canvas.Left="242" Height="75" Width="183" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="17" Margin="300,0,0,0" Click="AccommodationDrop"/>
+        <Button x:Name="MediaDropBTN" Content="Media" Canvas.Left="455" Height="75" Width="256" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="17" Canvas.Top="1" Margin="482,0,0,0" Click="MediaDrop"/>
+        <Button Content="Reservation" HorizontalAlignment="Left" VerticalAlignment="Top" Height="75" Width="288" Click="OpenMoveReservation" Canvas.Left="736" FontSize="17" Margin="736,0,0,0" />
         <Button Click="OpenProfil" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="75" Width="119" Canvas.Left="736" FontSize="17" Margin="880,636,0,0" >
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Grid>
-                        <Ellipse Margin="10,0,0,-13">
-                            <Ellipse.Fill>
-                                <ImageBrush ImageSource="/View/Owner/profil.png"/>
-                            </Ellipse.Fill>
-
+                        <Ellipse Margin="10,0,0,-13" Fill="Black">
                         </Ellipse>
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
@@ -28,15 +24,11 @@
             </Button.Template>
         </Button>
 
-        <Button x:Name="CreateNewAccommodationBTN" Visibility="Hidden" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="75" Width="95" Click="OpenOwnerForm" Canvas.Left="1081" Canvas.Top="83" FontSize="17" Margin="26,636,0,0" Padding="-7,1,1,1" Foreground="Black" RenderTransformOrigin="0,0" >
+        <Button x:Name="CreateNewAccommodationBTN" Visibility="Hidden" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="75" Width="95" Click="OpenOwnerForm" Canvas.Left="1081" Canvas.Top="83" FontSize="17" Margin="26,636,0,0" Padding="-7,1,1,1" Foreground="Black" RenderTransformOrigin="0,0" Background="Black" >
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Grid>
-                        <Ellipse Margin="0,0,0,-13">
-                            <Ellipse.Fill>
-                                <ImageBrush ImageSource="/View/Owner/plus.png"/>
-                            </Ellipse.Fill>
-
+                        <Ellipse Margin="0,0,0,-13" Fill="Black">
                         </Ellipse>
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Grid>
@@ -50,7 +42,10 @@
         <Button x:Name="GradeGuestBTN" Visibility="Hidden" Content="Grade Guest" HorizontalAlignment="Left" VerticalAlignment="Top" Height="56" Width="299" Click="OpenGradeForm" Canvas.Left="1081" Canvas.Top="123" FontSize="17" Margin="0,75,0,0" />
         <Button x:Name="ReviewFormBTN" Visibility="Hidden"  Content="Review Form" HorizontalAlignment="Left" VerticalAlignment="Top" Height="57" Width="361" Click="OpenReviewForm" Canvas.Left="1081" Canvas.Top="163" FontSize="17" Margin="299,74,0,0" />
         <Button x:Name="ForumsBTN" Visibility="Hidden"  Content="Forums" HorizontalAlignment="Left" VerticalAlignment="Top" Height="57" Width="364" Canvas.Left="1081" Canvas.Top="163" FontSize="17" Margin="660,74,0,0" />
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="75" Width="101" Background="#FFEC1515">
 
-        
+        </Button>
+
+
     </Grid>
 </Window>
