--- a/InitialProject/InitialProject/View/Owner/OwnerProfil.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerProfil.xaml
@@ -7,18 +7,19 @@
         mc:Ignorable="d"
         Title="OwnerProfil" Height="450" Width="800">
     <Grid Loaded="OnLoad">
-        <Label Content="Owner: " HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="124" FontSize="30"/>
+        <Label x:Name="SuperOwnerLabel" Content="" HorizontalAlignment="Left" Margin="304,10,0,0" VerticalAlignment="Top" Width="124" FontSize="30" Loaded="SuperOwnerLabel_Loaded"/>
         <Label Content="Username:" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="159" FontSize="30"/>
-        <TextBox HorizontalAlignment="Left" Margin="169,72,0,0" TextWrapping="Wrap" Text="New Username" VerticalAlignment="Top" Width="347" Height="43"/>
+        <TextBox x:Name="UsernameTXT" HorizontalAlignment="Left" Margin="169,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="347" Height="43" FontSize="20" Loaded="OnLoad"/>
         <Button Content="Change" HorizontalAlignment="Left" Margin="521,72,0,0" VerticalAlignment="Top" Height="43" Width="113"/>
         <Label Content="Password:" HorizontalAlignment="Left" Margin="10,120,0,0" VerticalAlignment="Top" Width="159" FontSize="30"/>
-        <TextBox HorizontalAlignment="Left" Margin="169,127,0,0" TextWrapping="Wrap" Text="New Password" VerticalAlignment="Top" Width="347" Height="43"/>
-        <TextBox HorizontalAlignment="Left" Margin="169,0,0,0" TextWrapping="Wrap" Text="Confirm PAssword" VerticalAlignment="Center" Width="347" Height="45"/>
+        <TextBox HorizontalAlignment="Left" Margin="169,127,0,0" TextWrapping="Wrap" Text="New Password" VerticalAlignment="Top" Width="347" Height="43" FontSize="20"/>
+        <TextBox HorizontalAlignment="Left" Margin="169,0,0,0" TextWrapping="Wrap" Text="Confirm Password" VerticalAlignment="Center" Width="347" Height="45" FontSize="20"/>
         <Button Content="Change" HorizontalAlignment="Left" Margin="521,0,0,0" VerticalAlignment="Center" Height="45" Width="113"/>
 
-        <Label x:Name="UserNameLabel" Content="" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" FontSize="30" Width="214"/>
-        <Label x:Name="SuperOwnerLabel" Content="Super Owner" Visibility="Hidden" HorizontalAlignment="Left" Margin="339,10,0,0" VerticalAlignment="Top" FontSize="30" Width="214"/>
         <Button Content="Log Out" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="222" Click="LogOut" Canvas.Left="1081" Canvas.Top="203" FontSize="17" Margin="538,347,0,0"/>
+        <Button Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Height="74" Width="76" Click="Button_Click" Background="#FFF51414">
+
+        </Button>
 
     </Grid>
 </Window>
